--- a/html/index.html
+++ b/html/index.html
@@ -180,8 +180,8 @@
                 </div>
                 <ul class="f-cb">
                     <li>
-                        <div class="tit">
-                            <span>优牛计划 <span class="span-c">| 30天自动理财</span></span>
+                        <div class="tit day90">
+                            <span>计划 <span class="span-c">| 30天自动理财</span></span>
                         </div>
                         <div class="con">
                             <div class="syl f-cb">
@@ -197,8 +197,8 @@
                         </div>
                     </li>
                     <li>
-                        <div class="tit">
-                            <span>优牛计划 <span class="span-c">| 30天自动理财</span></span>
+                        <div class="tit day30">
+                            <span>计划 <span class="span-c">| 30天自动理财</span></span>
                         </div>
                         <div class="con">
                             <div class="syl f-cb">
@@ -214,8 +214,8 @@
                         </div>
                     </li>
                     <li>
-                        <div class="tit">
-                            <span>优牛计划 <span class="span-c">| 90天自动理财</span></span>
+                        <div class="tit day180">
+                            <span>计划 <span class="span-c">| 90天自动理财</span></span>
                         </div>
                         <div class="con">
                             <div class="syl f-cb">
@@ -232,8 +232,8 @@
                         </div>
                     </li>
                     <li class="last">
-                        <div class="tit">
-                            <span>优牛计划 <span class="span-c">| 120天自动理财</span></span>
+                        <div class="tit day360">
+                            <span>计划 <span class="span-c">| 120天自动理财</span></span>
                         </div>
                         <div class="con">
                             <div class="syl f-cb">
@@ -255,13 +255,14 @@
             <div class="ui-direct">
                 <div class="tit">
                     <a href="#" class="f-fr more mr10">项目列表></a>
-                    <h3>预期年化收益率12%-14%,p2p p2c 投产业</h3>
+                    <h3><span>直投项目</span>预期年化收益率12%-14%,p2p p2c 投产业</h3>
                 </div>
                 <div class="list">
                     <ul class="f-cb">
                         <li>
                             <div class="name">
-                                <h3>项目：知名电气企业流动资金项目</h3>
+                                <h3>项目：知名电气企业流动资金</h3>
+                                <span>优牛计划</span>
                             </div>
                             <div class="pl15 pr15">
                                 <div class="attr f-cb">
@@ -276,9 +277,6 @@
                                 </div>
                             </div>
                             <p class="p1">高收益 有保障</p>
-                            <div class="btn-box">
-                                <a target="_blank" class="ui-button ui-button-mid ui-button-red" href="#">立即投资</a>
-                            </div>
                             <div class="jindu">
                                 已募集<span class="num">58%</span>
                                 <span class="ui-rate">
@@ -287,11 +285,15 @@
                                     </span>
                                 </span>
                             </div>
+                            <div class="btn-box">
+                                <a target="_blank" class="ui-button ui-button-mid ui-button-red" href="#">立即投资</a>
+                            </div>
                         </li>
 
                         <li>
                             <div class="name">
-                                <h3>项目：知名电气企业流动资金项目</h3>
+                                <h3>项目：知名电气企业流动资金</h3>
+                                <span>优牛计划</span>
                             </div>
                             <div class="pl15 pr15">
                                 <div class="attr f-cb">
@@ -306,17 +308,18 @@
                                 </div>
                             </div>
                             <p class="p1">高收益 有保障</p>
+                            <div class="time pb15">
+                                <span class="day">00</span>天<span class="hour">00</span>时<span class="minute">05</span>分<span class="second">09</span>秒
+                            </div>
                             <div class="btn-box">
                                 <a target="_blank" class="ui-button ui-button-mid ui-button-orange" href="#">即将发布</a>
-                            </div>
-                            <div class="time pt15">
-                                <span class="day">00</span>天<span class="hour">00</span>时<span class="minute">05</span>分<span class="second">09</span>秒
                             </div>
                         </li>
                         <li>
                             <i class="icon-huanqing"></i>
                             <div class="name">
-                                <h3>项目：知名电气企业流动资金项目</h3>
+                                <h3>项目：知名电气企业流动资金</h3>
+                                <span>优牛计划</span>
                             </div>
                             <div class="pl15 pr15">
                                 <div class="attr f-cb">
@@ -331,9 +334,6 @@
                                 </div>
                             </div>
                             <p class="p1">高收益 有保障</p>
-                            <div class="btn-box">
-                                <a target="_blank" class="ui-button ui-button-mid ui-button-gray" href="#">已还清</a>
-                            </div>
                             <div class="jindu">
                                 已募集<span class="num">100%</span>
                                 <span class="ui-rate">
@@ -341,12 +341,16 @@
                                         <span style="width: 100%;" class="barIn"></span>
                                     </span>
                                 </span>
+                            </div>
+                            <div class="btn-box">
+                                <a target="_blank" class="ui-button ui-button-mid ui-button-gray" href="#">已还清</a>
                             </div>
                         </li>
                         <li>
                             <i class="icon-full"></i>
                             <div class="name">
-                                <h3>项目：知名电气企业流动资金项目</h3>
+                                <h3>项目：知名电气企业流动资金</h3>
+                                <span>优牛计划</span>
                             </div>
                             <div class="pl15 pr15">
                                 <div class="attr f-cb">
@@ -361,9 +365,6 @@
                                 </div>
                             </div>
                             <p class="p1">高收益 有保障</p>
-                            <div class="btn-box">
-                                <a target="_blank" class="ui-button ui-button-mid ui-button-russetish" href="#">已满标</a>
-                            </div>
                             <div class="jindu">
                                 已募集<span class="num">100%</span>
                                 <span class="ui-rate">
@@ -371,6 +372,9 @@
                                         <span style="width: 100%;" class="barIn"></span>
                                     </span>
                                 </span>
+                            </div>
+                            <div class="btn-box">
+                                <a target="_blank" class="ui-button ui-button-mid ui-button-russetish" href="#">已满标</a>
                             </div>
                         </li>
                     </ul>
