--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,9 @@
 <link rel="stylesheet" type="text/css" href="../css/common.css">
 <script type="text/javascript" src="../js/seajs/2.2.1/sea.js"></script>
 <script type="text/javascript" src="../js/config.js"></script>
+<script type="text/javascript">
+    seajs.use("../js/page/base.js");
+</script>
 
 <link rel="stylesheet" type="text/css" href="../css/page/index.css">
 </head>
@@ -39,13 +42,23 @@
             <div class="ui-container f-cb">
                 <a href="#" class="ui-header-logo"></a>
                 <ul class="ui-nav">
-                    <li><a href="#">首页</a></li>
-                    <li><a href="#">我要投资</a></li>
-                    <li><a href="#">安全保障</a></li>
-                    <li><a href="#">新闻中心</a></li>
-                    <li><a href="#">媒体报道</a></li>
-                    <li><a href="#">新手指引</a></li>
-                    <li><a href="#">关于投牛</a></li>
+                    <li class="item"><a href="#">首页</a></li>
+                    <li id="subnav" class="item subitem"><a class="dropdown" href="#">我要投资<i class="arrow"></i></a>
+                        <ul class="sublist " style="display: none">
+                            <li><a href="#">投A股</a></li>
+                            <li><a href="#">投H股</a></li>
+                            <li><a href="#">新三板</a></li>
+                            <li><a href="#">P2P</a></li>
+                            <li><a href="#">投资管</a></li>
+                            <li><a href="#">投产业</a></li>
+                            <li><a href="#">转让专区</a></li>
+                        </ul>
+                    </li>
+                    <li class="item"><a href="#">安全保障</a></li>
+                    <li class="item"><a href="#">新闻中心</a></li>
+                    <li class="item"><a href="#">媒体报道</a></li>
+                    <li class="item"><a href="#">新手指引</a></li>
+                    <li class="item"><a href="#">关于投牛</a></li>
                 </ul>
             </div>
         </div>
@@ -261,7 +274,7 @@
                     <ul class="f-cb">
                         <li>
                             <div class="name">
-                                <h3>项目：知名电气企业流动资金</h3>
+                                <h3>项目：知名电气企业流动</h3>
                                 <span>优牛计划</span>
                             </div>
                             <div class="pl15 pr15">
@@ -276,7 +289,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="p1">高收益 有保障</p>
+                            <p class="p1"><i class="icon-ensure"></i>高收益 有保障</p>
                             <div class="jindu">
                                 已募集<span class="num">58%</span>
                                 <span class="ui-rate">
@@ -292,7 +305,7 @@
 
                         <li>
                             <div class="name">
-                                <h3>项目：知名电气企业流动资金</h3>
+                                <h3>项目：知名电气企业流动</h3>
                                 <span>优牛计划</span>
                             </div>
                             <div class="pl15 pr15">
@@ -307,7 +320,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="p1">高收益 有保障</p>
+                            <p class="p1"><i class="icon-ensure"></i>高收益 有保障</p>
                             <div class="time pb15">
                                 <span class="day">00</span>天<span class="hour">00</span>时<span class="minute">05</span>分<span class="second">09</span>秒
                             </div>
@@ -316,9 +329,8 @@
                             </div>
                         </li>
                         <li>
-                            <i class="icon-huanqing"></i>
                             <div class="name">
-                                <h3>项目：知名电气企业流动资金</h3>
+                                <h3>项目：知名电气企业流动</h3>
                                 <span>优牛计划</span>
                             </div>
                             <div class="pl15 pr15">
@@ -333,7 +345,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="p1">高收益 有保障</p>
+                            <p class="p1"><i class="icon-ensure"></i>高收益 有保障</p>
                             <div class="jindu">
                                 已募集<span class="num">100%</span>
                                 <span class="ui-rate">
@@ -343,13 +355,15 @@
                                 </span>
                             </div>
                             <div class="btn-box">
-                                <a target="_blank" class="ui-button ui-button-mid ui-button-gray" href="#">已还清</a>
+                                <a target="_blank" class="ui-button-yhq f-cb" href="#">
+                                    <span class="statusL"></span>
+                                    <span class="statusR">已还清</span>
+                                </a>
                             </div>
                         </li>
                         <li>
-                            <i class="icon-full"></i>
                             <div class="name">
-                                <h3>项目：知名电气企业流动资金</h3>
+                                <h3>项目：知名电气企业流动</h3>
                                 <span>优牛计划</span>
                             </div>
                             <div class="pl15 pr15">
@@ -364,7 +378,126 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="p1">高收益 有保障</p>
+                            <p class="p1"><i class="icon-ensure"></i>高收益 有保障</p>
+                            <div class="jindu">
+                                已募集<span class="num">100%</span>
+                                <span class="ui-rate">
+                                    <span class="progressBar">
+                                        <span style="width: 100%;" class="barIn"></span>
+                                    </span>
+                                </span>
+                            </div>
+                            <div class="btn-box">
+                                <a target="_blank" class="ui-button ui-button-mid ui-button-russetish" href="#">已满标</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="name">
+                                <h3>项目：知名电气企业流动</h3>
+                                <span>优牛计划</span>
+                            </div>
+                            <div class="pl15 pr15">
+                                <div class="attr f-cb">
+                                    <div class="attr-c">
+                                        <p class="red">13.8%</p>
+                                        <p>年化收益率</p>
+                                    </div>
+                                    <div class="attr-c">
+                                        <p class="blank">90</p>
+                                        <p>项目期限[天]</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="p1"><i class="icon-ensure"></i>高收益 有保障</p>
+                            <div class="jindu">
+                                已募集<span class="num">58%</span>
+                                <span class="ui-rate">
+                                    <span class="progressBar">
+                                        <span style="width: 67%;" class="barIn"></span>
+                                    </span>
+                                </span>
+                            </div>
+                            <div class="btn-box">
+                                <a target="_blank" class="ui-button ui-button-mid ui-button-red" href="#">立即投资</a>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="name">
+                                <h3>项目：知名电气企业流动</h3>
+                                <span>优牛计划</span>
+                            </div>
+                            <div class="pl15 pr15">
+                                <div class="attr f-cb">
+                                    <div class="attr-c">
+                                        <p class="red">13.8%</p>
+                                        <p>年化收益率</p>
+                                    </div>
+                                    <div class="attr-c">
+                                        <p class="blank">90</p>
+                                        <p>项目期限[天]</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="p1"><i class="icon-ensure"></i>高收益 有保障</p>
+                            <div class="time pb15">
+                                <span class="day">00</span>天<span class="hour">00</span>时<span class="minute">05</span>分<span class="second">09</span>秒
+                            </div>
+                            <div class="btn-box">
+                                <a target="_blank" class="ui-button ui-button-mid ui-button-orange" href="#">即将发布</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="name">
+                                <h3>项目：知名电气企业流动</h3>
+                                <span>优牛计划</span>
+                            </div>
+                            <div class="pl15 pr15">
+                                <div class="attr f-cb">
+                                    <div class="attr-c">
+                                        <p class="red">13.8%</p>
+                                        <p>年化收益率</p>
+                                    </div>
+                                    <div class="attr-c">
+                                        <p class="blank">90</p>
+                                        <p>项目期限[天]</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="p1"><i class="icon-ensure"></i>高收益 有保障</p>
+                            <div class="jindu">
+                                已募集<span class="num">100%</span>
+                                <span class="ui-rate">
+                                    <span class="progressBar">
+                                        <span style="width: 100%;" class="barIn"></span>
+                                    </span>
+                                </span>
+                            </div>
+                            <div class="btn-box">
+                                <a target="_blank" class="ui-button-hkz f-cb" href="#">
+                                    <span class="statusL"></span>
+                                    <span class="statusR">还款中</span>
+                                </a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="name">
+                                <h3>项目：知名电气企业流动</h3>
+                                <span>优牛计划</span>
+                            </div>
+                            <div class="pl15 pr15">
+                                <div class="attr f-cb">
+                                    <div class="attr-c">
+                                        <p class="red">13.8%</p>
+                                        <p>年化收益率</p>
+                                    </div>
+                                    <div class="attr-c">
+                                        <p class="blank">90</p>
+                                        <p>项目期限[天]</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="p1"><i class="icon-ensure"></i>高收益 有保障</p>
                             <div class="jindu">
                                 已募集<span class="num">100%</span>
                                 <span class="ui-rate">
@@ -387,7 +520,7 @@
                 <div class="ui-news bgc-white">
                     <div class="ui-title">
                         <a href="#" class="more">更多></a>
-                        <h2><i class="icon-news"></i>媒体报道</h2>
+                        <h2>媒体报道</h2>
                     </div>
                     <div class="ui-news-con">
                         <div class="news-img">
@@ -422,7 +555,7 @@
                 <div class="ui-predict bgc-white">
                     <div class="ui-title">
                         <a href="#" class="more">更多></a>
-                        <h2><i class="icon-predict"></i>项目预告</h2>
+                        <h2>项目预告</h2>
                     </div>
                     <div class="ui-predict-list">
                         <ul>
@@ -445,7 +578,7 @@
             <div class="ui-cooperation bgc-white mt15 mb15">
                 <div class="ui-title">
                     <a href="#" class="more">更多></a>
-                    <h2><i class="icon-news"></i>合作伙伴</h2>
+                    <h2>合作伙伴</h2>
                 </div>
                 <div class="ui-cooperation-list">
                     <ul class="f-cb">
@@ -462,7 +595,64 @@
         </div>
     </div>
     <div class="ui-footer">
-		
+        <div class="ui-container">
+            <div class="friend-link f-cb">
+                <span>友情链接</span>
+                <ul>
+                    <li><a href="http://www.wdj168.com/">网贷界</a></li>
+                    <li><a href="http://www.p2pwe.com/">网贷寡人</a></li>
+                    <li><a href="http://www.dierkezhan.com/">第二客栈</a></li>
+                    <li><a href="http://www.p2p110.com/">网贷110</a></li>
+                    <li><a href="http://www.wangdai3.com/">网贷第三方</a></li>
+                    <li><a href="http://www.wangdaibuluo.com/">网贷部落</a></li>
+                    <li><a href="http://www.p2pjd.com/">网贷经典</a></li>
+                    <li><a href="http://www.ttwdai.com/">天天网贷</a></li>
+                    <li><a href="http://www.wangdaikuaixun.com/">网贷快讯</a></li>
+                    <li><a href="http://www.p2ptouhang.com/">网贷投行</a></li>
+                    <li><a href="http://www.p2pjy.com/">网贷精英</a></li>
+                    <li><a href="http://www.jingyi98.com/">网贷平台排名</a></li>
+                </ul>
+            </div>
+        </div>
+        
+        <div class="ui-container f-cb">
+            <div class="foot-kefu">
+                <i class="icon-sp1-new sp1-new-footkefu"></i>
+            </div>
+            <div class="site-link">
+                <ul class="f-cb">
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">合作伙伴</a></li>
+                    <li><a href="#">法律法规</a></li>
+                    <li><a href="#">诚聘英才</a></li>
+                    <li><a href="#">联系我们</a></li>
+                    <li><a href="#">实事关注</a></li>
+                    <li><a href="#">友情链接</a></li>
+                    <li><a href="#">网贷之家</a></li>
+                    <li><a href="#">网贷天眼</a></li>
+                </ul>
+                <p class="qun">投牛网客户理财交流QQ群：375824406</p>
+            </div>
+            <div class="foot-ewm">
+                <dl><dt><i class="icon-sp1-new sp1-new-wx-ewm"></i></dt><dd>订阅号</dd></dl>
+                <dl><dt><i class="icon-sp1-new sp1-new-phone-ewm"></i></dt><dd>服务号</dd></dl>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="ui-container f-cb">
+                <div class="auth-link f-cb">
+                    <a href="#" class="vficon icon-norton"></a>
+                    <a href="#" class="vficon icon-chengxin"></a>
+                    <a href="#" class="vficon icon-360safe"></a>
+                    <a href="#" class="vficon icon-icp"></a>
+                </div>
+                <div class="copyright">
+                    <p class="p1">
+                        &copy;Copyright(c)2015 <span>touniu365</span>.com.All Rights Reserved <a rel="nofollow" href="http://www.miitbeian.gov.cn/" target="_blank">京ICP备14061732号-1</a>
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
 <script type="text/javascript">
     var lefttime = 1029352;
