--- a/html/test.html
+++ b/html/test.html
@@ -94,50 +94,11 @@
     
     <div class="list-wrap mt15 mb15">
         <div class="ui-container bgc-white boder f-cb">
-            <div class="ui-topBox f-cb">
-                <div class="topBoxL">
-                    <!-- 面包屑导航 -->
-                    <div class="ui-crumb">
-                        <span><i class="icon-weizhi"></i>我的位置：</span><a href="#">我要投资</a> > <a href="#">直投项目</a>
-                    </div>
-
-                    <!-- 筛选 -->
-                    <div class="ui-filter p20">
-                        <div class="item f-cb">
-                            <span class="f-fl">项目利率：</span>
-                            <ul class="f-fl">
-                                <li><a href="#" class="active">全部</a></li>
-                                <li><a href="#">8%以下</a></li>
-                                <li><a href="#">8%-10%</a></li>
-                                <li><a href="#">10%-13%</a></li>
-                                <li><a href="#">13%以上</a></li>
-                            </ul>
-                        </div>
-                        <div class="item f-cb">
-                            <span class="f-fl">项目期限：</span>
-                            <ul class="f-fl">
-                                <li><a href="#" class="active">全部</a></li>
-                                <li><a href="#">1-93天</a></li>
-                                <li><a href="#">94-186天</a></li>
-                                <li><a href="#">187-366天</a></li>
-                                <li><a href="#">360天以上</a></li>
-                            </ul>
-                        </div>
-                        <div class="item f-cb">
-                            <span class="f-fl">项目总额：</span>
-                            <ul class="f-fl">
-                                <li><a href="#" class="active">全部</a></li>
-                                <li><a href="#">1-10万</a></li>
-                                <li><a href="#">10-100万</a></li>
-                                <li><a href="#">100-500万</a></li>
-                                <li><a href="#">500万以上</a></li>
-                            </ul>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="topBoxR">
-                    <a href="#"><i class="icon-jsq"></i></a>
+            <div class="ui-topBox ui-xinshou f-cb">
+                <!-- 面包屑导航 -->
+                <div class="ui-crumb">
+                    <span class="jsq"><a href="#">理财计算器<i class="icon-jsq"></i></a></span>
+                    <span><i class="icon-weizhi"></i>我的位置：</span><a href="#">我要投资</a> > <a href="#">直投项目</a>
                 </div>
             </div>
             
@@ -157,10 +118,10 @@
                                         <span class="red">13.8%</span>预计年化收益率
                                     </li>
                                     <li class="li2">
-                                        <span class="red">12000000</span>项目总额[元]
+                                        <span>12000000</span>项目总额[元]
                                     </li>
                                     <li class="li3">
-                                        <span class="red">90</span>项目期限[天]
+                                        <span>90</span>项目期限[天]
                                     </li>
                                 </ul>
                             </div>
