--- a/html/index.html
+++ b/html/index.html
@@ -552,6 +552,40 @@
                                 <a target="_blank" class="ui-button ui-button-mid ui-button-russetish" href="#">已满标</a>
                             </div>
                         </li>
+
+                        <li>
+                            <div class="name">
+                                <h3>项目：知名电气企业流动</h3>
+                                <span>优牛计划</span>
+                            </div>
+                            <div class="pl15 pr15">
+                                <div class="attr f-cb">
+                                    <div class="attr-c">
+                                        <p class="red">13.8%</p>
+                                        <p>年化收益率</p>
+                                    </div>
+                                    <div class="attr-c">
+                                        <p class="blank">90</p>
+                                        <p>项目期限[天]</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="p1"><i class="icon-ensure"></i>高收益 有保障</p>
+                            <div class="btn-forward time pb15">
+                                <span class="day">00</span>天<span class="hours">00</span>时<span class="minute">00</span>分<span class="second">09</span>秒
+                            </div>
+                            <div class="jindu" style="display:none">
+                                已募集<span class="num">0%</span>
+                                <span class="ui-rate">
+                                    <span class="progressBar">
+                                        <span style="width: 0%;" class="barIn"></span>
+                                    </span>
+                                </span>
+                            </div>
+                            <div class="btn-box">
+                                <a target="_blank" class="ui-button ui-button-mid ui-button-orange" href="#">即将发布</a>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
